<resources>
    <string name="app_name">CS323-TerriyonTylerProject:Movies</string>\
    <string name="Movies">Movies</string>
    <string name="morning_show">Morning Show</string>
    <string name="afternoon_show">Afternoon Show</string>
    <string name="late_night_show">Late Night Show</string>
    <string name="purchase_ticket">Purchase Ticket</string>
    <string name="theatre">Theatre</string>
    <string name="settings">Settings</string>
    <string name="to_hint">Seen it? Leave a review!</string>

    <string-array name="options">
        <item>Movies</item>
        <item>Theaters</item>
    </string-array>

    <string-array name="movies">

    </string-array>

    <string-array name="Theatres">
        <item>Infinity theatres</item>
        <item>Xscape theatres</item>
        <item>Riverrun theatres</item>
    </string-array>

    <string-array name="titles">
        <item>Settings</item>
    </string-array>

</resources>
